<resources>
    <string name="app_name">Yo</string>
    <string name="yo_messenger">Yo Chats</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="_00_123456789">(+00) 123456789</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="mobile">Enter your Mobile</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="verify">VERIFY</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="otp_verification">Otp Verification</string>
    <string name="please_enter_the_otp_sent_your_number_n_xx_xxxxxxxxx">Please enter the otp sent your number\n +xx xxxxxxxxx</string>
    <string name="get_otp">Get Otp</string>
    <string name="xxxxxx">XXXXXX</string>
    <string name="resend_otp_in_30sec">Resend Otp in 60sec</string>
    <string name="enter_your_details">Enter your Details</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create">CREATE</string>
    <string name="developed_by_raju">Developed by Raju</string>
    <string name="home">Home</string>
    <string name="change_phone">Change Phone</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="profile">Profile</string>
    <string name="edit_details">Edit Details</string>
    <string name="log_out">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yo_chats">Yo Chats</string>
    <string name="chat">Chat</string>
    <string name="calls">Calls</string>
    <string name="groups">Groups</string>
    <string name="new_chat">New Chat</string>
    <string name="feature">Feature Coming Soon</string>
    <string name="name">Name</string>
    <string name="edit_your_name">Enter your Name</string>
    <string name="update">Update</string>
    <string name="phone">Phone</string>
    <string name="please_enter_the_otp_which_was_sent_your_previous_number">Please enter the otp which was sent your previous number</string>
    <string name="enter_new_number">Enter new number</string>
    <string name="next">NEXT</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_message">Enter your Message</string>
    <string name="online">Online</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>