<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".activities.OtpActivity"
    android:orientation="vertical">
    <ImageButton
        android:id="@+id/backOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:padding="@dimen/_20sdp"
        android:background="@android:color/transparent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="100"
        android:gravity="center"
        android:layout_margin="@dimen/_20sdp">


        <ImageView
            android:layout_weight="20"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_160sdp"
            android:src="@drawable/otpicon"/>

        <TextView
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:textSize="@dimen/_22ssp"
            android:textColor="@color/myPrimary"/>

        <TextView
            android:layout_weight="5"
            android:id="@+id/otpNumber_Otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_the_otp_sent_your_number_n_xx_xxxxxxxxx"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"/>

        <com.chaos.view.PinView
            android:id="@+id/otp"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:cursorVisible="true"
            android:foregroundTint="#F4EFEF"
            android:hint="@string/xxxxxx"
            android:inputType="number"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemRadius="5dp"
            app:itemWidth="50dp"
            android:elevation="10dp"
            app:lineColor="@color/black" />

        <FrameLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_20sdp"
                app:cornerRadius="@dimen/_8sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_13ssp"
                android:id="@+id/buttonOtp"/>

            <ProgressBar
                android:backgroundTint="@android:color/transparent"
                android:background="@drawable/progress_bg"
                android:visibility="gone"
                android:id="@+id/progressOtp"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_gravity="center"/>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_otp_in_30sec"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp"
            android:id="@+id/resendOtp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_weight="10"/>
    </LinearLayout>

</LinearLayout>