<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_margin="@dimen/_20sdp"
    tools:context=".activities.SignInActivity">

    <ImageView
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_160sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/signin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@color/myPrimary"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="Login To Continue"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />


    <com.hbb20.CountryCodePicker
        android:id="@+id/countryCodePicker"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userPhoneSignin"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            app:hintTextColor="@color/black"
            android:layout_marginTop="@dimen/_5sdp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="@dimen/_2sdp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@color/black"
            android:elevation="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:background="@drawable/background_field"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordSignin"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:hintTextColor="@color/black"
            android:layout_marginTop="@dimen/_3sdp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="@dimen/_2sdp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/black"
            android:elevation="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:background="@drawable/background_field"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_15sdp"
                app:cornerRadius="@dimen/_8sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_13ssp"
                android:id="@+id/buttonSignIn"/>

            <ProgressBar
                android:visibility="gone"
                android:id="@+id/progressSignin"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_gravity="center"/>
        </FrameLayout>


        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:id="@+id/textCreateNewAccount_SignIn"
            android:textColor="@color/black"/>

    </LinearLayout>
</LinearLayout>