<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/myPrimary"
    tools:context=".activities.ProfileActivity">

    <ImageButton
        android:id="@+id/profile_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/profile_userProfile"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_oval="true" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/addNewPic"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/circular_bg"
        android:backgroundTint="@color/myPrimary"
        android:scaleType="centerInside"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="@+id/profile_userProfile"
        app:layout_constraintTop_toTopOf="@+id/profile_userProfile"
        app:riv_oval="true" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:src="@drawable/ic_user"
                app:tint="@color/secondary_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:text="@string/name"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold|italic" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/profileUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/user_name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_18ssp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <ImageButton
                        android:id="@+id/profile_editName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_32sdp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/ic_edit"
                        app:tint="@color/myPrimary" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:src="@drawable/ic_phone"
                app:tint="@color/secondary_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:text="@string/phone"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold|italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/profile_user_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/_00_123456789"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_18ssp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <ImageButton
                        android:id="@+id/profile_editPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_32sdp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/ic_edit"
                        app:tint="@color/myPrimary" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/profile_progressBar"
        android:background="@drawable/progress_bg"
        android:visibility="gone"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="176dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>